--- a/fe/public/index.html
+++ b/fe/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <link rel="icon" type="image/x-icon" href="./Images/logo.ico" />
+    <link rel="icon" type="image/x-icon" href="/public/Images/logo.ico" />
     <meta
       name="description"
       content="Web site created using create-react-app"
